애니메이션 추가 및 텍스트 추가 수정완료

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,8 @@
   font-family: 'BMJUA';
   src: url('/src/assets/fonts/BMJUA.ttf');
 }
+
+@font-face {
+  font-family: 'crayon';
+  src: url('/src/assets/fonts/Pangolin.ttf');
+}
