Design: 폰트 및 배치 수정

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'BMJUA';
-  src: url('/src/assets/fonts/BMJUA.ttf');
+  font-family: "HS";
+  src: url("/src/assets/fonts/HS유지체.ttf");
 }
