--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,8 @@
   font-family: "HS";
   src: url("/src/assets/fonts/HS유지체.ttf");
 }
+
+@font-face {
+  font-family: 'crayon';
+  src: url('/src/assets/fonts/Pangolin.ttf');
+}
